src/objects/APTS_Stage_Product_Line_Tree__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Active__c</fullName>
        <label>Active</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Alternative_ID__c</fullName>
        <label>Alternative ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_BU_Name__c</fullName>
        <label>BU Name</label>
        <picklist>
            <picklistValues>
                <fullName>Breakers &amp; Switches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enclosures &amp; DIN-Rail Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LV Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protection, Connection &amp; Wire Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sundry LP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wiring Accessories</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_BU__c</fullName>
        <label>BU</label>
        <picklist>
            <picklistValues>
                <fullName>LPBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPCW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPWA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>LP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Error_Description__c</fullName>
        <label>Error Description</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Final_ID__c</fullName>
        <label>Final ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Operational_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Operational Object</description>
        <label>Operational Object</label>
        <referenceTo>APTS_Product_Line_Tree__c</referenceTo>
        <relationshipLabel>Stage Product Line Tree</relationshipLabel>
        <relationshipName>Stage_Product_Line_Tree</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Owner__c</fullName>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_PG_Name__c</fullName>
        <label>PG Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_PG__c</fullName>
        <label>PG</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Line_1_ID__c</fullName>
        <label>Product Line 1 ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Line_1_Name__c</fullName>
        <label>Product Line 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Line_2_ID__c</fullName>
        <label>Product Line 2 ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Line_2_Name__c</fullName>
        <label>Product Line 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Line_3_ID__c</fullName>
        <label>Product Line 3 ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Line_3_Name__c</fullName>
        <label>Product Line 3 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_RowStatus__c</fullName>
        <label>Row Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Stage Product Line Tree</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_BU__c</columns>
        <columns>APTS_BU_Name__c</columns>
        <columns>APTS_Division__c</columns>
        <columns>APTS_PG__c</columns>
        <columns>APTS_PG_Name__c</columns>
        <columns>APTS_Final_ID__c</columns>
        <columns>APTS_RowStatus__c</columns>
        <columns>APTS_Error_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PLT-{0000}</displayFormat>
        <label>Stage Product Line Tree</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Product Line Tree</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>